// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mockTemplate Tests With class based React Component 1`] = `
"let mockDefaultTest: jest.Mock
let mockDefaultTestReturn: JSX.Element
function resetMockDefaultTest() {
    mockedReset
}
jest.mock(\\"./mock\\", () => ({
    __esmodule: true,
    default: (...args: any[]) => mockDefaultTest(args),
}))
"
`;

exports[`mockTemplate Tests With default function 1`] = `
"let mockDefaultTest: jest.Mock
let mockDefaultTestReturn: mockReturn
function resetMockDefaultTest() {
    mockedReset
}
jest.mock(\\"./mock\\", () => ({
    __esmodule: true,
    default: (...args: any[]) => mockDefaultTest(args),
}))
"
`;

exports[`mockTemplate Tests With function based React Component 1`] = `
"let mockDefaultTest: jest.Mock
let mockDefaultTestReturn: JSX.Element
function resetMockDefaultTest() {
    mockedReset
}
jest.mock(\\"./mock\\", () => ({
    __esmodule: true,
    default: (...args: any[]) => mockDefaultTest(args),
}))
"
`;

exports[`mockTemplate Tests With mixed functions 1`] = `
"let mockNamedTest: jest.Mock
let mockNamedTestReturn: mockReturn
function resetMockNamedTest() {
    mockedReset
}
let mockDefaultTest: jest.Mock
let mockDefaultTestReturn: mockReturn
function resetMockDefaultTest() {
    mockedReset
}
jest.mock(\\"./mock\\", () => ({
    namedTest: (...args: any[]) => mockNamedTest(args),
    __esmodule: true,
    default: (...args: any[]) => mockDefaultTest(args),
}))
"
`;

exports[`mockTemplate Tests With multiple named functions 1`] = `
"let mockNamedTest_1: jest.Mock
let mockNamedTest_1Return: mockReturn
function resetMockNamedTest_1() {
    mockedReset
}
let mockNamedTest_2: jest.Mock
let mockNamedTest_2Return: mockReturn
function resetMockNamedTest_2() {
    mockedReset
}
jest.mock(\\"./mock\\", () => ({
    namedTest_1: (...args: any[]) => mockNamedTest_1(args),
    namedTest_2: (...args: any[]) => mockNamedTest_2(args),
}))
"
`;

exports[`mockTemplate Tests With named function 1`] = `
"let mockNamedTest: jest.Mock
let mockNamedTestReturn: mockReturn
function resetMockNamedTest() {
    mockedReset
}
jest.mock(\\"./mock\\", () => ({
    namedTest: (...args: any[]) => mockNamedTest(args),
}))
"
`;
